# cap_touch

./: CMakeLists.txt  CMakePresets.json  Kconfig  LICENSE  README.md  debug.conf  debug_dk.conf  prj.conf  release.conf  uicr_update.py
analysis/: div.ipynb  web_log.html
analysis/artificial_finger/: analyze.ipynb
analysis/artificial_finger/data/comp/: measurements.md
analysis/current_measure/: current_analyze.ipynb  measurements.md
analysis/voltage_dependence/: analyze_voltage_dependence.ipynb
boards/: nrf52dk_nrf52832.overlay
boards/arm/nrf52_basic/: Kconfig  Kconfig.board  nrf52_basic.dts  nrf52_basic.yaml  nrf52_basic_defconfig
boards/arm/nrf52_monkey/: Kconfig.board  Kconfig.defconfig  nrf52_monkey.dts  nrf52_monkey.yaml  nrf52_monkey_defconfig
overlays/: log_ble_overlay.conf  log_rtt_overlay.conf  log_uart_overlay.conf
scripts/: analyze.py  web_log.html
scripts/data/adc/: measurements.md
scripts/data/comp/: measurements.md
src/: hardware_spec.h  main.c
src/bluetooth/: CMakeLists.txt  Kconfig  bt_connection_manager.c  bt_connection_manager.h  bt_log.c  bt_log.h
src/cap_touch/: CMakeLists.txt  cap_touch.h  ct_adc_charge_share.c  ct_current_oscillate.c  ct_rc_comp_oscillate.c  ct_rc_gpio_oscillate.c  ct_rc_oscillate.c
src/io/: CMakeLists.txt  cap_touch_discharge.c  cap_touch_discharge.h  cap_touch_oscillate.c  cap_touch_oscillate.h  led.c  led.h
src/services/: CMakeLists.txt  hardware_spec.c  hardware_spec.h  ppi_index.c  ppi_index.h
src/utils/: CMakeLists.txt  macros_common.h  ppi_connect.c  ppi_connect.h  sorted_index_get.h
